Updating to OCP 3.11.59

--- a/inventory-host-TEMPLATE.yaml
+++ b/inventory-host-TEMPLATE.yaml
@@ -1,5 +1,5 @@
 #
-# ansible inventory for OpenShift Container Platform  3.11.16
+# ansible inventory for OpenShift Container Platform  3.11.59
 #
 
 # Configuring your inventory file
@@ -24,14 +24,7 @@ openshift_deployment_type=openshift-enterprise
 openshift_disable_check="disk_availability,memory_availability,docker_image_availability"
 
 # OpenShift Version:
-# If you modify the openshift_image_tag or the openshift_pkg_version variables after the cluster is set up, then an upgrade can be triggered, resulting in downtime.
-# If openshift_image_tag is set, its value is used for all hosts in system container environments, even those that have another version installed. If
-# Use this variable to specify a container image tag to install or configure.
-#openshift_pkg_version is set, its value is used for all hosts in RPM-based environments, even those that have another version installed.
-openshift_image_tag=v3.11.16
-# Use this variable to specify an RPM version to install or configure.
-openshift_pkg_version=-3.11.16
-openshift_release=3.11.16
+openshift_release=3.11.59
 
 # Node Groups
 openshift_node_groups=[{'name': 'node-config-master', 'labels': ['node-role.kubernetes.io/master=true','runtime=docker']}, {'name': 'node-config-infra', 'labels': ['node-role.kubernetes.io/infra=true','runtime=docker']}, {'name': 'node-config-glusterfs', 'labels': ['runtime=docker']}, {'name': 'node-config-compute', 'labels': ['node-role.kubernetes.io/compute=true','runtime=docker'], 'edits': [{ 'key': 'kubeletArguments.pods-per-core','value': ['20']}]}]
@@ -47,60 +40,82 @@ openshift_enable_olm=true
 ###########################################################################
 ### OpenShift Registries Locations
 ###########################################################################
-
+# OLD oreg. Prior to 3.11
 #oreg_url=registry.access.redhat.com/openshift3/ose-${component}:${version}
+
+# Need credentials from: https://access.redhat.com/term-based-registry/
 oreg_url=registry.redhat.io/openshift3/ose-${component}:${version}
-oreg_auth_user=<user-with-subs>
-oreg_auth_password=<password>
+oreg_auth_user=CHANGE_ME_REGISTRY_SERVICE_ACCOUNT
+oreg_auth_password=CHANGE_ME_SERVICE_KEY
 
 # For Operator Framework Images
-openshift_additional_registry_credentials=[{'host':'registry.connect.redhat.com','user':'<user-with-subs>','password':'<password>','test_image':'mongodb/enterprise-operator:0.3.2'}]
+openshift_additional_registry_credentials=[{'host':'registry.connect.redhat.com','user':'HANGE_ME_REGISTRY_SERVICE_ACCOUNT','password':'CHANGE_ME_SERVICE_KEY','test_image':'mongodb/enterprise-operator:0.3.2'}]
 
-openshift_examples_modify_imagestreams=true
+openshift_examples_modify_imagestreams=false
+
+# NOTE: accept insecure registries and registries with self-signed certs
+# setup for lab environment
+openshift_docker_hosted_registry_insecure=true
 
 ###########################################################################
 ### OpenShift Container Storage (OCS)
 ###########################################################################
 
-openshift_master_dynamic_provisioning_enabled=True
+openshift_master_dynamic_provisioning_enabled=true
 
-# OCS storage cluster
-# From https://github.com/red-hat-storage/openshift-cic
+#
+# Enable Glusterfs Storageclass
+#
 openshift_storage_glusterfs_namespace=openshift-storage
 openshift_storage_glusterfs_storageclass=true
-openshift_storage_glusterfs_storageclass_default=false
+openshift_storage_glusterfs_storageclass_default=true
 
+#
+# Enable Glusterfs Block Storageclass
+#
 openshift_storage_glusterfs_block_deploy=true
 openshift_storage_glusterfs_block_host_vol_create=true
+# NOTE: host_vol_size is effectively an upper limit on the size of glusterblock volumes 
+# unless you manually create larger GlusterFS block-hosting volumes
 openshift_storage_glusterfs_block_host_vol_size=200
 openshift_storage_glusterfs_block_storageclass=true
-openshift_storage_glusterfs_block_storageclass_default=true
+openshift_storage_glusterfs_block_storageclass_default=false
 
-# Container image to use for glusterfs pods
-openshift_storage_glusterfs_image="registry.access.redhat.com/rhgs3/rhgs-server-rhel7:v3.10"
-
-# Container image to use for glusterblock-provisioner pod
-openshift_storage_glusterfs_block_image="registry.access.redhat.com/rhgs3/rhgs-gluster-block-prov-rhel7:v3.10"
-
-# Container image to use for heketi pods
-openshift_storage_glusterfs_heketi_image="registry.access.redhat.com/rhgs3/rhgs-volmanager-rhel7:v3.10"
+#
+# Enable Glusterfs S3 (Tech Preview)
+#
+#openshift_storage_glusterfs_s3_deploy=true
+#openshift_storage_glusterfs_s3_account=s3testvolume
+#openshift_storage_glusterfs_s3_user=s3adminuser
+#openshift_storage_glusterfs_s3_password=s3adminpass
+#openshift_storage_glusterfs_s3_pvc=dynamic
+## size (Gi) of glusterfs backed PVC used for S3 object data storage
+#openshift_storage_glusterfs_s3_pvc_size=2
+## size (gi) of glusterfs backed PVC used for S3 object metadata storage
+#openshift_storage_glusterfs_s3_meta_pvc_size=1
 
 # GlusterFS version
-#  Knowledgebase
-#   https://access.redhat.com/solutions/3617551
-#  Bugzilla
-#   https://bugzilla.redhat.com/show_bug.cgi?id=163.1057
 #  Complete OpenShift GlusterFS Configuration README
 #   https://github.com/openshift/openshift-ansible/tree/master/roles/openshift_storage_glusterfs
-openshift_storage_glusterfs_version=v3.10
-openshift_storage_glusterfs_block_version=v3.10
-openshift_storage_glusterfs_s3_version=v3.10
-openshift_storage_glusterfs_heketi_version=v3.10
-# openshift_storage_glusterfs_registry_version=v3.10
-# openshift_storage_glusterfs_registry_block_version=v3.10
-# openshift_storage_glusterfs_registry_s3_version=v3.10
-# openshift_storage_glusterfs_registry_heketi_version=v3.10
+openshift_storage_glusterfs_version=v3.11
+openshift_storage_glusterfs_block_version=v3.11
+openshift_storage_glusterfs_s3_version=v3.11
+openshift_storage_glusterfs_heketi_version=v3.11
 
+# Container image to use for glusterfs pods
+openshift_storage_glusterfs_image="registry.access.redhat.com/rhgs3/rhgs-server-rhel7:v3.11"
+
+# Container image to use for glusterblock-provisioner pod
+openshift_storage_glusterfs_block_image="registry.access.redhat.com/rhgs3/rhgs-gluster-block-prov-rhel7:v3.11"
+
+# Container image to use for heketi pods
+openshift_storage_glusterfs_heketi_image="registry.access.redhat.com/rhgs3/rhgs-volmanager-rhel7:v3.11"
+
+## If using a dedicated glusterfs_registry cluster
+# openshift_storage_glusterfs_registry_version=v3.11
+# openshift_storage_glusterfs_registry_block_version=v3.11
+# openshift_storage_glusterfs_registry_s3_version=v3.11
+# openshift_storage_glusterfs_registry_heketi_version=v3.11
 
 ###########################################################################
 ### OpenShift Master Vars
@@ -110,12 +125,15 @@ openshift_master_api_port=443
 openshift_master_console_port=443
 
 #Default:  openshift_master_cluster_method=native
-openshift_master_cluster_hostname=openshift-console.example.com
-# Note: use if using different internal & external FQDN
-#openshift_master_cluster_public_hostname=openshift-console-ext.example.com
+# Internal cluster name
+openshift_master_cluster_hostname=openshift-console-int.example.com
+
+# Note: use if using different internal & external FQDN (ie. using LB) 
+# set the external cluster name here
+openshift_master_cluster_public_hostname=openshift-console-ext.example.com
+
+# NOTE: Default wildcard domain for applications
 openshift_master_default_subdomain=apps.example.com
-#openshift_master_ca_certificate={'certfile': '/root/intermediate_ca.crt', 'keyfile': '/root/intermediate_ca.key'}
-openshift_master_overwrite_named_certificates=True
 
 # Audit log
 # openshift_master_audit_config={"enabled": true, "auditFilePath": "/var/log/openpaas-oscp-audit/openpaas-oscp-audit.log", "maximumFileRetentionDays": 14, "maximumFileSizeMegabytes": 500, "maximumRetainedFiles": 5}
@@ -127,8 +145,8 @@ openshift_master_overwrite_named_certificates=True
 osm_cluster_network_cidr=10.1.0.0/16
 openshift_portal_net=172.30.0.0/16
 
-# os_sdn_network_plugin_name='redhat/openshift-ovs-networkpolicy'
-os_sdn_network_plugin_name='redhat/openshift-ovs-multitenant'
+os_sdn_network_plugin_name='redhat/openshift-ovs-networkpolicy'
+# os_sdn_network_plugin_name='redhat/openshift-ovs-multitenant'
 # os_sdn_network_plugin_name='redhat/openshift-ovs-subnet'
 
 ###########################################################################
@@ -143,22 +161,6 @@ openshift_master_htpasswd_file=/root/htpasswd.openshift
 # Other Identity Providers 
 # https://docs.openshift.com/container-platform/3.11/install_config/configuring_authentication.html
 
-# https://github.com/openshift/openshift-ansible/blob/master/inventory/hosts.example
-# LDAP auth
-#openshift_master_identity_providers=[{'name': 'my_ldap_provider', 'challenge': 'true', 'login': 'true', 'kind': 'LDAPPasswordIdentityProvider', 'attributes': {'id': ['dn'], 'email': ['mail'], 'name': ['cn'], 'preferredUsername': ['uid']}, 'bindDN': '', 'bindPassword': '', 'insecure': 'false', 'url': 'ldap://ldap.example.com:389/ou=users,dc=example,dc=com?uid'}]
-#
-# Configure LDAP CA certificate
-# Specify either the ASCII contents of the certificate or the path to
-# the local file that will be copied to the remote host. CA
-# certificate contents will be copied to master systems and saved
-# within /etc/origin/master/ with a filename matching the "ca" key set
-# within the LDAPPasswordIdentityProvider.
-#
-#openshift_master_ldap_ca=<ca text>
-# or
-#openshift_master_ldap_ca_file=<path to local ca file to use>
-
-
 ###########################################################################
 ### OpenShift Metrics and Logging Vars
 ###########################################################################
@@ -167,22 +169,20 @@ openshift_master_htpasswd_file=/root/htpasswd.openshift
 # Prometheus Metrics
 #########################
 
-openshift_hosted_prometheus_deploy=true
-openshift_prometheus_namespace=openshift-metrics
-openshift_prometheus_node_selector={"node-role.kubernetes.io/infra":"true"}
-
 openshift_cluster_monitoring_operator_install=true
+openshift_prometheus_node_selector={"node-role.kubernetes.io/infra":"true"}
 
 openshift_cluster_monitoring_operator_prometheus_storage_capacity=20Gi
 openshift_cluster_monitoring_operator_alertmanager_storage_capacity=2Gi
+
+# Enable dynamic storage provisioning for Prometheus
 openshift_cluster_monitoring_operator_prometheus_storage_enabled=True
 openshift_cluster_monitoring_operator_alertmanager_storage_enabled=True
 
-# The next two will be enabled in 3.11.z
-# will use deafult storage class until then so set the block storage class as default
-
-# openshift_cluster_monitoring_operator_prometheus_storage_class_name='glusterfs-storage-block'
-# openshift_cluster_monitoring_operator_alertmanager_storage_class_name='glusterfs-storage-block'
+# The next two are enabled in 3.11.z
+# When not specified, Prometheus will use deafult storage class
+#openshift_cluster_monitoring_operator_prometheus_storage_class_name='glusterfs-storage-block'
+#openshift_cluster_monitoring_operator_alertmanager_storage_class_name='glusterfs-storage-block'
 
 ########################
 # Cluster Metrics
@@ -191,13 +191,13 @@ openshift_cluster_monitoring_operator_alertmanager_storage_enabled=True
 openshift_metrics_install_metrics=True
 
 
+# Usign Glusterfs or glusterfs-block
 openshift_metrics_cassandra_storage_type=dynamic
-openshift_metrics_cassandra_pvc_storage_class_name='glusterfs-storage-block'
+# openshift_metrics_cassandra_pvc_storage_class_name='glusterfs-storage-block'
 
 openshift_metrics_hawkular_nodeselector={"node-role.kubernetes.io/infra": "true"}
 openshift_metrics_cassandra_nodeselector={"node-role.kubernetes.io/infra": "true"}
 openshift_metrics_heapster_nodeselector={"node-role.kubernetes.io/infra": "true"}
-
 # Store Metrics for 2 days
 openshift_metrics_duration=2
 
@@ -232,7 +232,9 @@ openshift_logging_install_eventrouter=True
 
 openshift_logging_es_pvc_dynamic=true
 openshift_logging_es_pvc_size=20Gi
+# using glusterfs block
 openshift_logging_es_pvc_storage_class_name='glusterfs-storage-block'
+# requires a minimum of 8Gi RAM available
 openshift_logging_es_memory_limit=8Gi
 openshift_logging_es_cluster_size=1
 openshift_logging_curator_default_days=2
@@ -247,8 +249,8 @@ openshift_logging_eventrouter_nodeselector={"node-role.kubernetes.io/infra": "tr
 ###########################################################################
 
 # default selectors for router and registry services
-# openshift_router_selector='node-role.kubernetes.io/infra=true'
-# openshift_registry_selector='node-role.kubernetes.io/infra=true'
+#openshift_router_selector='node-role.kubernetes.io/infra=true'
+#openshift_registry_selector='node-role.kubernetes.io/infra=true'
 
 # NOTE: Qty should NOT exceed the number of infra nodes
 openshift_hosted_router_replicas=2
@@ -263,7 +265,6 @@ openshift_hosted_registry_enforcequota=true
 openshift_hosted_registry_storage_kind=glusterfs
 openshift_hosted_registry_storage_volume_size=10Gi
 openshift_hosted_registry_selector="node-role.kubernetes.io/infra=true"
-
 
 ###########################################################################
 ### OpenShift Service Catalog Vars
