--- a/inventory-host-aio-TEMPLATE.yaml
+++ b/inventory-host-aio-TEMPLATE.yaml
@@ -5,7 +5,7 @@
 ###########################################################################
 #
 # DISCLAIMER: THIS ALL-IN-ONE DEPLOYMENT IS AN UNSUPPORTED DEPLOYMENT
-#             USING NFS AS STORAGE BACKEND FOR INFRASTRUCTURE COMPONETNS
+#             USING NFS AS STORAGE BACKEND FOR INFRASTRUCTURE COMPONENTS
 #
 ###########################################################################
 #
