--- a/inventory-host-TEMPLATE.yaml
+++ b/inventory-host-TEMPLATE.yaml
@@ -104,17 +104,20 @@ openshift_storage_glusterfs_heketi_version=v3.11
 
 # NOTE: https://docs.openshift.com/container-platform/3.11/install_config/persistent_storage/persistent_storage_glusterfs.html#install-advanced-installer
 
+# NOTE: Using specific sub-releases tags for fixed bugs
+# https://access.redhat.com/containers/?tab=tags#/registry.access.redhat.com/rhgs3/rhgs-server-rhel7
+
 # Container image to use for glusterfs pods
-openshift_storage_glusterfs_image="registry.access.redhat.com/rhgs3/rhgs-server-rhel7:v3.11"
+openshift_storage_glusterfs_image="registry.access.redhat.com/rhgs3/rhgs-server-rhel7:v3.11.2"
 
 # Container image to use for glusterblock-provisioner pod
-openshift_storage_glusterfs_block_image="registry.access.redhat.com/rhgs3/rhgs-gluster-block-prov-rhel7:v3.11"
+openshift_storage_glusterfs_block_image="registry.access.redhat.com/rhgs3/rhgs-gluster-block-prov-rhel7:v3.11.2"
 
 # Container image to use for Gluster S3
-openshift_storage_glusterfs_s3_image=registry.redhat.io/rhgs3/rhgs-s3-server-rhel7:v3.11
+openshift_storage_glusterfs_s3_image="registry.redhat.io/rhgs3/rhgs-s3-server-rhel7:v3.11.2"
 
 # Container image to use for heketi pods
-openshift_storage_glusterfs_heketi_image="registry.access.redhat.com/rhgs3/rhgs-volmanager-rhel7:v3.11"
+openshift_storage_glusterfs_heketi_image="registry.access.redhat.com/rhgs3/rhgs-volmanager-rhel7:v3.11.2"
 
 ## If using a dedicated glusterfs_registry storage cluster
 # openshift_storage_glusterfs_registry_version=v3.11
